# arkad

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  README.md  check_compilation.sh  check_test.sh  run_check.sh  rust-toolchain.toml  rust_out  test_all_connection.sh  test_no_defaults.sh  test_simplified_queue.sh  test_trait_bound.sh
sec/: Cargo.toml  README.md
sec/design/state_diagram/: sec_state_diagram.md  sec_state_machine.md
sec/design/uml_class_diagram/: sec_error_handling.md  sec_sample_state.md  sec_state_machine.md  state_machine.drawio
sec/src/: lib.rs
sec/src/lib/: lib.rs  prelude.rs
sec/src/lib/error/: mod.rs
sec/src/lib/error/state_machine/: mod.rs
sec/src/lib/implementations/: mod.rs
sec/src/lib/implementations/states/: mod.rs
sec/src/lib/implementations/transitions/: mod.rs
sec/src/lib/sec_state_machine/: mod.rs  sec_context_data.rs  sec_error.rs  sec_state.rs  sec_state_data.rs  sec_super_state.rs  sec_transition.rs
sec/src/lib/sec_state_machine/extract/: mod.rs
sec/src/lib/sec_state_machine/ingestion/: mod.rs
sec/src/lib/sec_state_machine/sec_error/: mod.rs
sec/src/lib/sec_state_machine/sec_state/: mod.rs
sec/src/lib/shared/: mod.rs
sec/src/lib/shared/cik/: cik_error.rs  constants.rs  mod.rs
sec/src/lib/shared/content_type/: mod.rs
sec/src/lib/shared/financial/: mod.rs
sec/src/lib/shared/headers/: constants.rs  headers_error.rs  mod.rs
sec/src/lib/shared/http_client/: mod.rs
sec/src/lib/shared/json_response/: json_parsing_error.rs  json_response_error.rs  mod.rs
sec/src/lib/shared/old_sec_client/: mod.rs
sec/src/lib/shared/request/: mod.rs
sec/src/lib/shared/response/: mod.rs
sec/src/lib/shared/sec_client/: http_client.rs  mod.rs  reqwest_http_client.rs  sec_client_error.rs
sec/src/lib/shared/sec_request/: constants.rs  mod.rs  sec_request_error.rs
sec/src/lib/shared/sec_response/: mod.rs  sec_response_error.rs
sec/src/lib/shared/status_code/: mod.rs
sec/src/lib/shared/url/: mod.rs  url_error.rs
sec/src/lib/shared/user_agent/: constants.rs  mod.rs  user_agent_error.rs
sec/src/lib/shared/validated_sec_response/: mod.rs  validated_sec_response_error.rs
sec/src/lib/state_machine/: mod.rs
sec/src/lib/state_machine/sec_error/: mod.rs
sec/src/lib/state_machine/sec_super_state/: mod.rs
sec/src/lib/state_machine/sec_transition/: mod.rs
sec/src/lib/state_machine/state/: mod.rs
sec/src/lib/state_machine/super_state/: mod.rs
sec/src/lib/state_machine/transition/: mod.rs
sec/src/lib/tests/: mod.rs
sec/src/lib/tests/common/: mod.rs
sec/src/lib/tests/fixtures/: mod.rs
sec/src/lib/traits/: mod.rs
sec/src/lib/traits/error/: mod.rs
sec/src/lib/traits/state_machine/: mod.rs  stream.rs
sec/src/sec_state_machine/: mod.rs
sec/src/sec_state_machine/ingestion/retrieval/: mod.rs
sec/tests/: integration_tests.rs  reqwest_client.rs  sec_client.rs  sec_response.rs
sec/tests/pipeline_coverage/: builder.rs  constants.rs  main.rs
state_machine/: Cargo.toml  README.md
state_machine/design/uml_class_diagram/: state_machine.drawio  state_machine_framework_design.md
state_machine/src/: lib.rs  prelude.rs
state_machine/src/state_machine/: mod.rs
state_machine/src/state_machine/state/: mod.rs
state_machine/src/state_machine/state/context/: mod.rs
state_machine/src/state_machine/state/context_data/: mod.rs
state_machine/src/state_machine/state/state_data/: mod.rs
state_machine/src/state_machine/super_state/: mod.rs
state_machine/src/state_machine/transition/: mod.rs
state_machine/src/tests/common/sample_hierarchical_state_machine/: mod.rs
state_machine/src/tests/common/sample_state/: mod.rs  sample_state_context.rs  sample_state_data.rs
state_machine/src/tests/common/simple_state_machine/: mod.rs
state_machine/src/tests/fixtures/: mod.rs
state_machine/src/tests/fixtures/sample_state/: mod.rs  sample_state_context.rs
state_machine/src/tests/fixtures/sample_transition/: mod.rs
state_machine/src/tests/fixtures/simple_state_machine/: mod.rs
utils/: Cargo.toml  README.md
utils/design/uml_class_diagram/: queue.md
utils/src/: lib.rs
utils/src/config/: constants.rs  error.rs  mod.rs  service.rs
utils/src/config/error/: mod.rs
utils/src/config/shared/: mod.rs
utils/src/config/shared/queue_access_manager/: constants.rs  mod.rs
utils/src/queue/: connection.rs  error.rs  mod.rs
utils/src/queue/channel/: builder.rs  mod.rs
utils/src/queue/channel/channel_config/: mod.rs
utils/src/queue/connection/: mod.rs
utils/src/queue/connector/: builder.rs  connector_kind.rs  mod.rs
utils/src/queue/constants/: mappings.rs  mod.rs
utils/src/queue/error/: mod.rs
utils/src/queue/error/connection_failed/: mod.rs
utils/src/queue/implementations/: mod.rs
utils/src/queue/implementations/channel/: builder.rs  consumer_channel.rs  inner.rs  mod.rs  (+1 more)
utils/src/queue/shared/: mod.rs
utils/src/queues/: mod.rs
utils/src/simplequeue/: mod.rs
utils/src/simplequeue/channel/: builder.rs  channel_config.rs  consumer_channel.rs  mod.rs  producer_channel.rs
utils/src/simplequeue/connection/: connection_kind.rs  connector.rs  mod.rs
utils/src/simplequeue/connector/: builder.rs  connector_kind.rs  mod.rs
utils/src/simplequeue/constants/: connector_kind.rs  mappings.rs  mod.rs  queue_identifiers.rs
utils/src/simplequeue/error/: mod.rs
utils/src/simplequeue/implementations/: mod.rs
utils/src/simplequeue/traits/: mod.rs
utils/src/tests/: mod.rs
utils/tests/: connector_integration_test.rs  queue_integration_tests.rs
xbrl/: Cargo.toml  DESIGN.md
xbrl/src/: lib.rs
xbrl/src/core/: accession_number.rs  confidence.rs  elements.rs  entity_name.rs  fact_set.rs  fiscal_period.rs  fiscal_year.rs  form.rs  frame.rs  graph.rs  mod.rs  namespace.rs  observation.rs  period.rs  provenance.rs  quarter.rs  resolved_fact.rs  unit.rs
xbrl/src/error/: mod.rs
xbrl/src/error/parsing/: mod.rs
xbrl/src/error/validation/: mod.rs
xbrl/src/sec_api/: company_concept.rs  company_facts.rs  frames.rs  mod.rs
xbrl/src/us_gaap/: mappings.rs  mod.rs  taxonomy.rs
(+362 files in other folders)
