[package]
name = "sec"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A State Machine Library for processing SEC filings in Rust."
repository = "https://github.com/DeCa09/state_machine"
categories = ["algorithms", "rust-patterns"]
keywords = ["state-machine", "design-pattern"]

[dependencies]
thiserror = "2"
state_maschine = { path = "../state_machine" }

[dev-dependencies]
pretty_assertions = "1"

[lib]
name = "sec"
path = "src/lib/lib.rs"

[[bin]]
name = "extraction"
path = "src/bin/extraction/main.rs"

[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
cargo = "deny"
all = "deny"

# Include stricter lints, although with a lower priority for ease of overriding
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Individual lints that are treated differently, e.g., override to 'allow' because lint too strict / doesn't apply 
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
