[package]
name = "sec"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A State Machine Library for processing SEC filings in Rust."
repository = "https://github.com/ironcapital/state_machine"
categories = ["algorithms", "rust-patterns"]
keywords = ["state-machine", "design-pattern"]

[dependencies]
thiserror = "2"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
async-trait = "0.1.88"
futures-core = "0.3"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
state_maschine = { path = "../state_machine" }
uuid = { version = "1.20.0", features = ["v4"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[features]
tracing-logging = ["tracing", "tracing-appender", "tracing-subscriber"]

[dev-dependencies]
pretty_assertions = "1"

[lib]
name = "sec"
path = "src/lib/lib.rs"

[[bin]]
name = "extraction"
path = "src/bin/extraction/main.rs"

[[bin]]
name = "stream_extract"
path = "src/bin/stream_extract/main.rs"
required-features = ["tracing-logging"]

[[bin]]
name = "stream_etl"
path = "src/bin/stream_etl/main.rs"
required-features = ["tracing-logging"]

[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
cargo = "deny"
all = "deny"

# Include stricter lints, although with a lower priority for ease of overriding
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Individual lints that are treated differently, e.g., override to 'allow' because lint too strict / doesn't apply 
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
