[package]
name = "state_maschine"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A State Machine Framework written in Rust."
repository = "https://github.com/ironcapital/state_machine"
categories = ["algorithms", "rust-patterns"]
keywords = ["state-machine", "design-pattern"]

[dependencies]

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
cargo = "deny"
all = "deny"

# Include stricter lints, although with a lower priority for ease of overriding
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Individual lints that are treated differently, e.g., override to 'allow' because lint too strict / doesn't apply 
module_name_repetitions = { level = "allow", priority = 1 }

