[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_queue_connection"
path = "src/bin/queues/main.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
lapin = "3.0.0"
dotenvy = "0.15.7"

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3.2.0" # For running tests in serial to avoid problems with shared resources, such as environment variables affecting other tests

[lints.rust]
unsafe_code = "forbid"


[lints.clippy]
cargo = "deny"
all = "deny"

# Include stricter lints, although with a lower priority for ease of overriding
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Individual lints that are treated differently, e.g., override to 'allow' because lint too strict / doesn't apply 
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
