[package]
name = "xbrl"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "XBRL domain logic: parsing, concept resolution, and financial statement validation."
repository = "https://github.com/ironcapital/state_machine"
categories = ["finance", "parser-implementations"]
keywords = ["xbrl", "sec", "financial-data", "parsing"]

[dependencies]
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1"

[lib]
name = "xbrl"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cargo = "deny"
all = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
